feat: khôi phục hệ quiz theo bài học từ nhánh check-ar
Nhánh develop giữ bản quiz-theo-reaction cũ trong khi FE và production
dùng quiz-theo-lesson (endpoint /staff/quiz-management/lessons). Lấy nguyên
vertical quiz + lesson từ origin/check-ar; gỡ QuizSeeder và
QuizAttemptTimeoutJob viết cho schema cũ (production không có).

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>